<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".LoginFragment"
    android:background="@drawable/gradient_background">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="233dp"
        android:layout_height="169dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/imagem_do_whatsapp_de_2023_05_03___s__19_17_49_removebg_preview" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:layout_marginTop="165dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_grey"
        />

    <TextView
        android:id="@+id/tvEntre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_account"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvHeader"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_grey"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tvEntre"
        android:hint="@string/Email"
        app:boxStrokeWidth="0dp"
        android:textColorHint="@color/teal_700"
        app:hintTextColor="@color/teal_700"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:background="@drawable/border"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tiEmail"
        android:hint="@string/passcode"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        android:textColorHint="@color/teal_700"
        app:hintTextColor="@color/teal_700"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/teal_700"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Log_in"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textColor="@color/teal_700"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</RelativeLayout>