<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvSubHeader"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Documents"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_below="@id/tvHeader"
            android:hint="@string/Name"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiNome"
            android:hint="@string/Phone"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiTelefone"
            android:hint="@string/Email"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiEmail"
            android:hint="@string/passcode"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:endIconMode="password_toggle"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/teal_700"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEnd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiPassword"
            android:hint="@string/Address"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEnd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiEnd1"
            android:hint="@string/Address2"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEnd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiEnd2"
            android:hint="@string/Address3"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnd3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCurriculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tiEnd3"
            android:hint="@string/Create_cv"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            android:background="@drawable/border"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCurriculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:maxLength="500" />

            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@id/tiCurriculo"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Signin"
            android:textAlignment="center"
            android:backgroundTint="@color/teal_700"/>

    </RelativeLayout>

</ScrollView>